# RAG_project

./: README.md  makefile
.future_github/workflows/: CI.yml
Django_app_front/: pyproject.toml
Fast_API_back/: pyproject.toml
Lambdas_functions/: pyproject.toml
Lambdas_functions/Doc_processing/: Lambda_2_Doc_processing.py
Lambdas_functions/Prompt_embedding/: Lambda_1_Prompt_embedding.py
infra/: pyproject.toml
