[project]
name = "infraascode"
version = "0.1.0"
description = "Here is made the build of our AWS Infrastructure using AWS CDK"
authors = [
    {name = "Amine.B"},
    {name = "Samy.A"}
]
readme = "README.md"
requires-python = ">=3.00"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
